refactor: migrate to Spring Data JPA